logout method
