# routes/api.php
@@ -9,5 +9,6 @@ Route::prefix('v1')->group(function () {
     Route::post('/login', [AuthController::class, 'login']);
     Route::get('/users', [UserController::class, 'getUsers']);
     Route::get('/users/{user}', [UserController::class, 'getUser']);
+    Route::middleware('auth:sanctum')->post('/logout', [AuthController::class, 'logout']);
     Route::middleware('auth:sanctum')->get('/profile', [AuthController::class, 'profile']);
 });
